add chat comunity

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <title>Legion Geek</title>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/617753/ThreeOrbitControls.js"></script>
+<script src="https://rawgit.com/spite/THREE.MeshLine/master/src/THREE.MeshLine.js"></script>
     <div id="root"></div>
   </body>
   <script
