--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
   <link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
   <link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
   <title>Legion Geek</title>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+ 
 </head>
 
 <body style="font-family: 'Roboto', sans-serif;">
@@ -23,5 +26,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+  <script>
+    AOS.init();
+  </script>
 </html>
