--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
   <link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+
+  <link rel="shortcut icon" href="https://i.imgur.com/W5xsOak.png" type="image/x-icon">
   <title>Legion Geek</title>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
